# dir-inspect

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  config.ini
.github/workflows/: msvc.yml
src/: DirInspect.cpp  DirInspect.h  main.cpp
